src/test/deca/context/valid/provided/PrintAssign.deca
// DESCRIPTION : Print d'un assignement
{
    int a = 1;
    print(a=2);
}
